--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Hello! Wow!</title>
+    <title>TrafficHero</title>
     <script src="js/phaser.js"></script>
     <script src="js/main.js"></script>
 
@@ -22,11 +22,11 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Your game title</h2>
+<h2>TrafficHero</h2>
 <ul>
 
 <li><strong>High Concept:</strong>
-A one-sentence summary of your game.
+Play as a Road Raging Traffic Hero and skip through all the traffic as fast as possible using various power-ups while avoiding other commuters in this mobile action/racing game.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
@@ -34,11 +34,11 @@ What experience do you want players to have when playing your game?
 </li>
 
 <li><strong>Genre:</strong>
-A single sentence that places the game within a game genre or a hybrid of genres.
+2D Mobile Action/Racing
 </li>
 
 <li><strong>Game play:</strong>
-A paragraph describing the actions the player can perform, the system dynamics, and the core mechanic. Include a concise explanation of the prototype’s inputs and their expected effects (how to play). You can also describe game play that is not in the prototype. You may include mock-up images for parts of the game not in the prototype.
+Control a car driven by our Hero, move left and right as you speed down the highway.  Pickup various power-ups to help get around or through other pesky cars, even shoot rockets with the right modifications.  Make sure he gets to where he needs to go, before he gets stuck in Traffic Jam!
 </li>
 
 <li><strong>Prototype goal:</strong>
@@ -46,19 +46,19 @@ What game mechanic is this prototype evaluating?
 </li>
 
 <li><strong>Features:</strong>
-What are the unique aspects of your game that set it apart?
+This game features 2D cartoon art with comical, happy characters. Arrow keys and a space bar control the player for now, but the final version would feature a gyroscope controlled player with a tap or a click used for the special actions.  Bright and happy music plays throughout the game.  The computer controlled cars randomly move from side to side. Future versions will incorporate cops & speed traps, street racers and semi-trucks, providing more complex game play.  The GUI will display lives, distance till the end of the level, and a timer counting down the remaining time until the infuriating traffic jam.  There will be a map that displays the different levels based on their distance from the player’s home.  The final app will have a garage in the home where you can upgrade and customize your car.
 </li>
 
 <li><strong>Setting/Premise:</strong>
-A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, put it here. If the game is abstract, then say so.
+Traffic Hero is set somewhere in the world where traffic is at it’s worst.
 </li>
 
 <li><strong>Story:</strong>
-If the game has a story, summarize it in a paragraph. How will the dramatic tension interact with the gameplay tension?
+Sitting in his lovely home our hero stares at a full schedule for a hectic week, each event at a different location all over town.  Heading out on today’s s journey our hero gets stuck behind a slow moving car.  As time passes our hero realizes that more and more cars are flooding on to the road slowing down traffic even more.  Eventually traffic comes to a standstill! Our hero yells in rage at the thought of being late when he left well ahead of schedule in order to arrive on time.  Soon he can’t take it anymore and he vows to never get stuck in a traffic jam again.  That night he modifies his car to make it faster and more agile. From the next day on our hero sets out, speeding through the streets to make it to wherever he needed to be on time.
 </li>
 
 <li><strong>Target Audience:</strong>
-A single sentence that describes the demographic you're trying to reach.
+16 to 28 year olds specifically, because they know the struggle of traffic and play games on their phones more than older generations; however, the game can be enjoyed by all ages.
 </li>
 
 <li><strong>Play time:</strong>
