--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@ body
 <h2>TrafficHero</h2>
 <ul>
 
+<li><strong>Warning:</strong>
+I am still messing around with controls and the way enemy cars spawn and react with the player.
+</li>
+
 <li><strong>High Concept:</strong>
 Play as a Road Raging Traffic Hero and skip through all the traffic as fast as possible using various power-ups while avoiding other commuters in this mobile action/racing game.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-What experience do you want players to have when playing your game?
+Players should feel relaxed, and have a good laugh after a stressful day.
 </li>
 
 <li><strong>Genre:</strong>
@@ -42,7 +46,7 @@ Control a car driven by our Hero, move left and right as you speed down the high
 </li>
 
 <li><strong>Prototype goal:</strong>
-What game mechanic is this prototype evaluating?
+This game is testing stress relief through commical gameplay, and randomly generated obsticles.
 </li>
 
 <li><strong>Features:</strong>
@@ -62,19 +66,19 @@ Sitting in his lovely home our hero stares at a full schedule for a hectic week,
 </li>
 
 <li><strong>Play time:</strong>
-How long does your game take to play?
+Each level will have a different time limit but nothing more than a few minutes.
 </li>
 
 <li><strong>Strategies:</strong>
-What player strategies do you expect will be effective at playing this game?
+Players who watch the traffic will find an easy path through the mess of cars.
 </li>
 
 <li><strong>Prototype Assets:</strong>
-Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
+Background was made by me (currently working on a better one), and the cars were made by Unlucky Studio in their Awesome Car Pack.
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-Which other game most closely resembles your game? If you are borrowing from a Phaser Example, you must say so here.
+Used the phaser space invader example to develope the prototype.
 </li>
 
 </ul>
